[package]
name = "pngsm"
version = "0.1.0"
edition = "2021"
about = "Png Secret Message implemented in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
crc = "3.0.1"
thiserror = "1.0.38"
